--- a/TODO
+++ b/TODO
@@ -40,6 +40,11 @@ Version 0.2
 
   Do not use pdu_syntax beyond operation API.
 
+- Assign default values to standard parameters in smpp_param.hrl (just like
+  for TLVs).
+
+- Automatically add/remove trailing '\0' in C-Octet Strings.
+
 
 Version 1.0
 -----------
