--- a/README
+++ b/README
@@ -1,7 +1,6 @@
-OSERL Version 0.1                                            February 07, 2004
+README - OSERL Version 0.1                                   February 07, 2004
 
-  http://sourceforge.net/projects/oserl/
-
+                    http://sourceforge.net/projects/oserl/
 
 Enrique Marcote Peña <mpquique@udc.es>
 
