param_syntax.hrl
- Field default added to standard record definition.

  STANDARD macro accordingly updated.

smpp_param.hrl

- Default values added to Standard parameters.

- Default values for TLVs reviewed.

smpp_pdu.hrl

- Default values moved to smpp_param.hrl.

- Field number_of_messages added to submit_sm, data_sm and submit_multi_sm.

- CDMA and TDMA specific TLVs are no longer commented out.

operation.erl

- new_pdu/5 function removed.  PDU defaults MACROS do no longer exist.

--- a/TODO
+++ b/TODO
@@ -51,6 +51,12 @@ Index
 
 - Remove unused (commented out) macros from hrls.
 
+- Define a couple of MACROS for every composite parameter.  One to assign
+  default (record) values, and the other to hide record definition to higher
+  layers.
+
+  DEST_TELEMATICS_ID_DEFAULT_VALUE
+  DEST_TELEMATICS_ID_VALUE(...)
 
 2. Version 1.0
 
