--- a/changes.txt
+++ b/changes.txt
@@ -9,17 +9,24 @@ Index
 
 1.  Changes 0.1 -> 0.2
 1.1 base_syntax.hrl
-1.2 pdu_syntax.erl
-1.3 operation.erl
-1.4 sm.erl
-1.5 gen_esme_session.erl
-1.6 gen_esme.erl
+1.2 param_syntax.hrl
+1.3 pdu_syntax.erl
+1.4 smpp_param.hrl
+1.5 smpp_pdu.hrl
+1.6 operation.erl
+1.7 sm.erl
+1.8 gen_esme_session.erl
+1.9 gen_esme.erl
 
 
 ---
 
 
 1. Changes 0.1 -> 0.2
+
+Makefiles were fixed to find compiled behaviors.
+
+Changes on individual modules are described below.
 
 
 1.1 base_syntax.hrl 
@@ -31,7 +38,14 @@ Index
     -define(EMPTY, ?UNION([])).
 
 
-1.2 pdu_syntax.erl
+1.2 param_syntax.hrl 
+
+- Field default added to standard record definition.
+
+  STANDARD macro accordingly updated.
+
+
+1.3 pdu_syntax.erl
 
 - Removed pdu_syntax:get_value/2 and pdu_syntax:set_value/3.  Using dictionary
   API instead.
@@ -39,23 +53,41 @@ Index
   pdu_syntax functions are no longer used beyond operation API.
 
 
-1.3 operation.erl
+1.4 smpp_param.hrl
+
+- Default values added to Standard parameters.
+
+- Default values for TLVs reviewed.
+
+
+1.5 smpp_pdu.hrl
+
+- Default values moved to smpp_param.hrl.
+
+- Field number_of_messages added to submit_sm, data_sm and submit_multi_sm.
+
+- CDMA and TDMA specific TLVs are no longer commented out.
+
+
+1.6 operation.erl
 
 - Implemented get_param/2 and set_param/3, replacements for 
   pdu_syntax:get_value/2 and pdu_syntax:set_value/3 respectively.
 
-
-1.4 sm.erl
-
-- Calls to pdu_syntax:get_value/2 replaced by operation:get_param/2.
+- new_pdu/5 function removed.  PDU defaults MACROS do no longer exist.
 
 
-1.5 gen_esme_session.erl
+1.7 sm.erl
 
 - Calls to pdu_syntax:get_value/2 replaced by operation:get_param/2.
 
 
-1.6 gen_esme.erl
+1.8 gen_esme_session.erl
+
+- Calls to pdu_syntax:get_value/2 replaced by operation:get_param/2.
+
+
+1.9 gen_esme.erl
 
 - Calls to pdu_syntax:get_value/2 replaced by operation:get_param/2.
 
