--- a/changes.txt
+++ b/changes.txt
@@ -30,6 +30,7 @@ Contents
 1.17 Other changes
 
 2.   Changes 0.2 -> 1.0
+2.1  gen_esme_session.erl
 
 ---
 
@@ -197,3 +198,14 @@ How these changes affected individual files is described below.
 2.   Changes 0.2 -> 1.0
 
 - Now shipped under the GNU Lesser General Public License.
+- gen_esme.hrl and gen_esme_session.hrl replaced by oserl.hrl
+
+How these changes affected individual files is described below.
+
+2.1  gen_esme_session.erl
+
+- Internal functions alert_notification/2, bind_receiver_resp/1, 
+  bind_transceiver_resp/1, bind_transmitter_resp/1, deliver_data_sm/2, 
+  deliver_sm/2, enquire_link/2, outbind/2, unbind/2 and unbind_resp/1 removed.
+- handle_input_corrupt_pdu/4 responds to corrupt unbind PDUs with an 
+  unbind_resp (due to a bug, a generic_nack was issued on previous versions.
